support/code-server/deployment.yaml
'apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: code-server
  template:
    metadata:
      labels:
        name: code-server
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: code-server
          image: codercom/code-server:3.8.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          securityContext:
            runAsUser: 1000
          volumeMounts:
            - mountPath: /home/coder
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: code-server
