support/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    name: code-server
